--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+django==3.1.6
 asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
@@ -6,10 +7,10 @@ django-filter==2.4.0
 gunicorn==20.0.4
 idna==2.10
 jsonfield==3.1.0
-# numpy==1.20.1
-# pandas==1.2.2
+numpy==1.20.1
+pandas==1.2.2
 pbr==5.5.1
-# pybliometrics==2.9.0
+pybliometrics==2.9.0
 pyodbc==4.0.30
 python-dateutil==2.8.1
 pytz==2021.1
